--- a/Omondi.html
+++ b/Omondi.html
@@ -162,6 +162,8 @@
             for (var pair of formData.entries()) {
                 console.log(pair[0] + ': ' + pair[1]);
             }
+            <a href="mailto:your-email@gmail.com">Send Email</a>
+
             // You can add more advanced logic for form submission, like showing a success message or redirecting the user
         });
     </script>
