--- a/Omondi.html
+++ b/Omondi.html
@@ -142,6 +142,8 @@
                 <label for="message">Message:</label>
                 <textarea id="message" name="message" rows="5" required></textarea>
                 <input type="submit" value="Send Message">
+                <a href="mailto:abrahamomo4@gmail.com">Send Email</a>
+
             </form>
         </div>
     </section>
