--- a/gis.html
+++ b/gis.html
@@ -56,6 +56,14 @@
                 <li><a href="https://www.nasa.gov/">NASA Earth Observing System Data and Information System (EOSDIS)</a></li>
                 <li><a href="https://www.naturalearthdata.com/">Natural Earth</a></li>
                 <li><a href="https://data.geocomm.com/">GIS Data Depot</a></li>
+                <li><a href="https://hub.arcgis.com/search">ArcGIS Hub</a></li>
+                <li><a href="https://www.opentopography.com/">Open Topography</a></li>
+                <li><a href="https://www.unep.org/publications-data">UNEP Environmental Data Explorer</a></li>
+                <li><a href="https://www.browser.dataspace.copernicus.eu/">Sentinel data</a></li>
+                <li><a href="https://terra.ipums.org">Terra Populus</a></li>
+                <li><a href="https://freegisdata.rtwilson.com/">Free GIS Data</a></li>
+                <li><a href="https://community.esri.com/t5/esri-training-documents/some-gis-data-sources/ta-p/913659">Esri Community</a></li>
+            
                 <!-- Add more data sources as needed -->
             </ul>
         </div>
@@ -68,6 +76,8 @@
                 <li><a href="https://leafletjs.com/examples.html">Leaflet.js Examples</a></li>
                   <li><a href="https://learn.arcgis.com/en/">ArcGIS Tutorials</a></li>
                   <li><a href="https://developers.google.com/earth-engine/tutorials">Google Earth Engine Tutorials</a></li>
+                <li><a href="https://libguides.mit.edu/gis/tutorials">MIT Libraries</a></li>
+                
                 <!-- Add more tutorials as needed -->
             </ul>
         </div>
